# nls-game-engine

./: .gitignore  .hgignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  get_compiler_version.sh
cmake/: AvailableModules.cmake  FindDirectX.cmake  GetAngelScript.cmake  GetBoost.cmake  GetCImg.cmake  GetGLM.cmake  LoadLibraries.cmake  Variables.cmake  Version.cmake
docs/: CMakeLists.txt  LICENSE-content.txt  LICENSE-source.txt  contributions.txt  customdoxygen.css  documentation.h  header.html  zlib-license.txt
include/: EngineConfig.cpp  EngineConfig.h.in  nullptr.h  threading.h
lib_src/: CMakeLists.txt
src/: CMakeLists.txt
src/GraphicsDLL/: AssetCreationHelpers.h  CMakeLists.txt  Components.h  DLLMain.cpp  GlobalPropertyNames.h  InterfaceUpdateable.h  Materials.h  Messages.h  RenderModule.cpp  RenderModule.h  RenderModuleComponents.cpp  RenderModuleFactories.cpp  RenderModuleMaterialsSystem.cpp  RenderModuleMessageHandlers.cpp  RenderModuleTexturesSystem.cpp  Textures.h  Types.h
src/GraphicsDLL/component/: CameraComponent.cpp  CameraComponent.h  RenderableComponent.cpp  RenderableComponent.h
src/GraphicsDLL/component/renderable/: CubeRenderable.cpp  CubeRenderable.h  D3DFont.cpp  D3DFont.h  GRID.CPP  GRID.H  HeightmapRenderable.cpp  HeightmapRenderable.h  LightAmbientRenderable.cpp  LightAmbientRenderable.h  LightDirectionalRenderable.cpp  LightDirectionalRenderable.h  LightPointRenderable.cpp  LightPointRenderable.h  ModelRenderable.cpp  ModelRenderable.h  PointLine.cpp  PointLine.h  Quad.cpp  Quad.h  RenderableHelicalTube.cpp  RenderableHelicalTube.h  Sprite.cpp  Sprite.h  TiledMap.cpp  TiledMap.h
src/GraphicsDLL/material/: BasicMaterial.cpp  BasicMaterial.h  MaterialInterface.h  MaterialsSystemInterface.cpp  MaterialsSystemInterface.h
src/GraphicsDLL/texture/: BasicTexture.cpp  BasicTexture.h  TextureAdjustable.cpp  TextureAdjustable.h  TextureInterface.h  TextureScroller.cpp  TextureScroller.h  TexturesSystemInterface.cpp  TexturesSystemInterface.h
src/PhysicsSimple/: Components.h  DLLMain.cpp  GlobalProperties.h  InterfaceUpdateable.h  Messages.h  PhysicsModule.cpp  PhysicsModule.h  PhysicsModuleCollisions.cpp  PhysicsModuleComponents.cpp  PhysicsModuleMessages.cpp  Types.h
src/PhysicsSimple/component/: ASTARMap.cpp  ASTARMap.h  ComponentLinearVelocity.cpp  ComponentLinearVelocity.h  GridMover.cpp  GridMover.h  InterfaceCollider.h
src/PhysicsSimple/component/collider/: ColliderSphere.cpp  ColliderSphere.h
src/ScriptDLL/: CMakeLists.txt
src/SoundSimple/: DLLMain.cpp  Messages.h  SoundModule.cpp  SoundModule.h  SoundModuleMessages.cpp  SoundModuleXACT.cpp
src/enginecore/: CMakeLists.txt  D3DXMathTypesRegister.cpp  EngineCore.cpp  EngineCore.h  EntityList.cpp  EntityList.h  EntityMap.cpp  EntityMap.h  EntityRegister.cpp  EventLoggerRegister.cpp  EventLoggerRegister.h  ModuleManager.cpp  ModuleManager.h  ScriptEngine.cpp  ScriptEngine.h  ScriptExecutor.cpp  ScriptExecutor.h  ScriptMath.cpp  main.cpp  sptrtypes.h
src/os_win32/: CMakeLists.txt  main.cpp  win32.cpp  win32.h
src/sharedbase/: CMakeLists.txt  ComponentInterface.cpp  ComponentInterface.h  Entity.cpp  Entity.h  Entity_fwd.h  Envelope.cpp  Envelope.h  Envelope_fwd.h  EventLogger.cpp  EventLogger.h  MessageRouter.cpp  MessageRouter.h  ModuleInterface.h  ModuleScriptInterface.h  OSInterface.cpp  OSInterface.h  OSInterface_fwd.h  PointList.cpp  PointList.h  PropertyMap.h  QuatMath.cpp  QuatMath.h  ScriptObjectInterface.h
src/windows/: CMakeLists.txt  main.cpp  win32.cpp  win32.h
